--- a/HTML/resume_project.html
+++ b/HTML/resume_project.html
@@ -149,6 +149,22 @@ Framework (March-May,2022)
                 </li>
         </li>
     </ul>
+
+    <section>
+        <h2>Frequently Asked Question</h2>
+        <details>
+            <summary>What is your greatest strength?</summary>
+            <p>My greatest strength is my ability to work with many different people. I believe that my ability to communicate effectively with people of all backgrounds has been a key factor in my success.</p>
+        </details><br/>
+        <details>
+            <summary>What is your greatest weakness?</summary>
+            <p>My greatest weakness is that I am a shy and nervous person by nature. I have been working on this weakness by reading books on public speaking and attending seminars on how to overcome shyness.</p>
+        </details><br/>
+           <details>
+            <summary>What are your salary expectations?</summary>
+            <p>I am looking for a salary in the range of $50,000 to $60,000 per year.</p>
+        </details>
+    </section>
  
 <footer>
     <p>&copy; 2023 Yash Saxena. All rights reserved</p>
